# SNN_opt

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
analysis/: bench_vs_libraries.py  cpp_binding_scoping.md  projection_neuromorphic_analysis.md  run_benchmark.py
analysis/results/: benchmark_raw.npz  benchmark_summary.yaml
benchmarks/: 01_convergence.py  02_spike_raster.py  03_warm_start.py  04_accuracy_tuning.py  README.md  figstyle.py  qpref.py  run_all.py
docs/: api.md  applications.md  index.md  theory.md
examples/: README.md  example1_advanced_2d.py  example1_basic_2d.py  example1_simple_2d.py  example2_3d_polytope.py  example3_linear_program.py  example4_warm_start.py  example5_infeasible_recovery.py  example6_equality_constraint.py  example7_svm_dual.py  example_raw_mode.py  run_all_examples.py
src/snn_opt/: __init__.py  projection_variants.py  solver.py  transforms.py
src/snn_opt/_native/: bindings.cpp  snn_qp_core.hpp
tests/: test_c_backend_parity.py  test_installation.py  test_transforms.py  test_unified_projection.py
