[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snn_opt"
version = "0.1.0"
description = "A spiking neural network solver for constrained convex optimization (QP/LP)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ameer Hamza Khan", email = "ahkhan@tzc.edu.cn" },
]
keywords = [
  "spiking-neural-networks",
  "convex-optimization",
  "quadratic-programming",
  "neuromorphic-computing",
  "projected-gradient",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.5"]
benchmarks = ["matplotlib>=3.5", "cvxpy>=1.4"]
dev = ["pytest>=7", "ruff>=0.5", "matplotlib>=3.5", "cvxpy>=1.4"]

[project.urls]
Homepage = "https://snn.ahkhan.me"
Repository = "https://github.com/ahkhan03/snn_opt"
Documentation = "https://snn.ahkhan.me/docs"
Issues = "https://github.com/ahkhan03/snn_opt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
